[project]
name = "chest-locator"
version = "0.1.0"
description = ""
authors = [
    {name = "Isaac Barnard",email = "bigike@werespecialstudios.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2 (>=2.9.11,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
